--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "use-debounce",
+  "name": "react-debounce-hook",
   "version": "1.0.0",
   "description": "A react hook for using a debouncing an input with state variables In react.",
   "main": "dist/index.js",
   "repository": "git@github.com:logzio/use-debounce.git",
   "author": "Amir Tugendhaft <Amir.Tugi@gmail.com>",
+  "keywords": ["react", "hooks", "react-hooks", "debounce", "useDebounce","debounce-hook", "react-debounce"],
   "contributors": [
     "Eden Turgeman <Edmx0.et@gmail.com>"
   ],
