--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "es6",
+    "target": "es2017",
+    "module": "esnext",
+    "declaration": true,
+    "outDir": "./dist",
+
     "strict": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
-  "exclude": ["node_modules/**"]
+  "include": [
+    "./src/**.ts"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./dist"
+  ]
 }
