--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-debounce-hook",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "A react hook for using a debouncing an input with state variables In react.",
+  "scripts": {
+    "build:prod": "yarn run webpack --env.mode production",
+    "build:dev": "yarn run webpack --env.mode development"
+  },
   "main": "dist/index.js",
   "repository": "git@github.com:logzio/use-debounce.git",
   "author": "Amir Tugendhaft <Amir.Tugi@gmail.com>",
@@ -23,5 +27,10 @@
     "@types/react": "^16.9.1",
     "react": "^16.9.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6"
+  }
 }
