--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "esnext",
-    "declaration": true,
     "outDir": "./dist",
-
+    "sourceMap": true,
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "target": "es6",
+    "jsx": "react"
   },
   "include": [
     "./src/**.ts"
