--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-debounce-hook",
-  "version": "1.1.0",
+  "version": "1.1.7",
   "description": "A react hook for using a debouncing an input with state variables In react.",
   "scripts": {
     "build:prod": "yarn run webpack --env.mode production",
     "build:dev": "yarn run webpack --env.mode development"
   },
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "repository": "git@github.com:logzio/use-debounce.git",
   "author": "Amir Tugendhaft <Amir.Tugi@gmail.com>",
   "keywords": [
@@ -23,11 +23,11 @@
   ],
   "license": "Apache-2.0",
   "private": false,
-  "dependencies": {
-    "@types/react": "^16.9.1",
+  "peerDependencies": {
     "react": "^16.9.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
