--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "react-debounce-hook",
-  "version": "1.1.7",
+  "version": "1.1.15",
   "description": "A react hook for using a debouncing an input with state variables In react.",
   "scripts": {
     "build:prod": "yarn run webpack --env.mode production",
     "build:dev": "yarn run webpack --env.mode development"
   },
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:logzio/use-debounce.git",
   "author": "Amir Tugendhaft <Amir.Tugi@gmail.com>",
   "keywords": [
     "react",
     "hooks",
+    "hook",
+    "react-hook",
     "react-hooks",
     "debounce",
     "useDebounce",
@@ -24,10 +26,11 @@
   "license": "Apache-2.0",
   "private": false,
   "peerDependencies": {
-    "react": "^16.9.0"
+    "react": "^16.8.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.1",
+    "react": "16.8.1",
+    "@types/react": "16.8.1",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
