--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-debounce-hook",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "description": "A react hook for using a debouncing an input with state variables In react.",
   "scripts": {
     "build:prod": "yarn run webpack --env.mode production",
     "build:dev": "yarn run webpack --env.mode development"
   },
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "git@github.com:logzio/use-debounce.git",
   "author": "Amir Tugendhaft <Amir.Tugi@gmail.com>",
   "keywords": [
